[tool.poetry]
name = "tablereservations"
version = "0.1.0"
description = ""
authors = ["tumb <sirsavil@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = {version = "^2.9.10", extras = ["postgres"]}
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
alembic = "^1.15.1"
sqlalchemy = "^2.0.38"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.9.9"


